// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Switch /> > should match snapshot when toggled 1`] = `
<label
  class="Switch_base__6xc8dy0"
>
  <div
    class="reset_block__1oah0223 VisuallyHidden_visuallyHidden__12d73qi0"
  >
    <input
      checked=""
      role="switch"
      tabindex="0"
      type="checkbox"
    />
  </div>
  <div
    class="reset_block__1oah0223 Switch_toggle__6xc8dy2 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_toggleOn__6xc8dy3"
    data-active="true"
  >
    <div
      class="reset_block__1oah0223 Switch_handle_default__6xc8dy5 Switch_handle_active__6xc8dy6"
    />
  </div>
</label>
`;

exports[`<Switch /> > should match snapshot when toggled and disabled 1`] = `
<label
  class="Switch_base__6xc8dy0"
>
  <div
    class="reset_block__1oah0223 VisuallyHidden_visuallyHidden__12d73qi0"
  >
    <input
      checked=""
      disabled=""
      role="switch"
      type="checkbox"
    />
  </div>
  <div
    class="reset_block__1oah0223 Switch_toggle__6xc8dy2 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_disabled__6xc8dy4 Switch_toggleOn__6xc8dy3"
    data-active="true"
    data-disabled="true"
  >
    <div
      class="reset_block__1oah0223 Switch_handle_default__6xc8dy5 Switch_handle_active__6xc8dy6"
    />
  </div>
</label>
`;

exports[`<Switch /> > should match snapshot when un-toggled 1`] = `
<label
  class="Switch_base__6xc8dy0"
>
  <div
    class="reset_block__1oah0223 VisuallyHidden_visuallyHidden__12d73qi0"
  >
    <input
      role="switch"
      tabindex="0"
      type="checkbox"
    />
  </div>
  <div
    class="reset_block__1oah0223 Switch_toggle__6xc8dy2 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75"
  >
    <div
      class="reset_block__1oah0223 Switch_handle_default__6xc8dy5"
    />
  </div>
</label>
`;

exports[`<Switch /> > should match snapshot when un-toggled and disabled 1`] = `
<label
  class="Switch_base__6xc8dy0"
>
  <div
    class="reset_block__1oah0223 VisuallyHidden_visuallyHidden__12d73qi0"
  >
    <input
      disabled=""
      role="switch"
      type="checkbox"
    />
  </div>
  <div
    class="reset_block__1oah0223 Switch_toggle__6xc8dy2 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75 Switch_disabled__6xc8dy4"
    data-disabled="true"
  >
    <div
      class="reset_block__1oah0223 Switch_handle_default__6xc8dy5"
    />
  </div>
</label>
`;

exports[`<Switch /> > should match snapshot without props 1`] = `
<label
  class="Switch_base__6xc8dy0"
>
  <div
    class="reset_block__1oah0223 VisuallyHidden_visuallyHidden__12d73qi0"
  >
    <input
      role="switch"
      tabindex="0"
      type="checkbox"
    />
  </div>
  <div
    class="reset_block__1oah0223 Switch_toggle__6xc8dy2 useTextStyles_root__1xnpmd70 reset_block__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_sizes_5__1xnpmd75"
  >
    <div
      class="reset_block__1oah0223 Switch_handle_default__6xc8dy5"
    />
  </div>
</label>
`;
